# BoardMouse

./: .gitignore  CMakeLists.txt  README.md
src/: Framework.h  main.cpp
src/Engine/: ChessDef.h  Engine.cpp  Engine.h
src/Engine/BitBoard/: BitBoard.cpp  BitBoard.h
src/Engine/BoardState/: BoardState.cpp  BoardState.h
src/Engine/ButterflyBoard/: ButterflyBoard.cpp  ButterflyBoard.h
src/Engine/Heuristics/: Heuristics.cpp  Heuristics.h
src/Engine/LookupGen/: LookupGen.cpp  LookupGen.h
src/Engine/Move/: Move.cpp  Move.h
src/Engine/MoveGen/: MoveGen.cpp  MoveGen.h
src/Engine/MoveOrdering/: MoveOrdering.cpp  MoveOrdering.h
src/Engine/MoveRating/: MoveRating.cpp  MoveRating.h
src/Engine/PieceValue/: PieceValue.cpp  PieceValue.h
src/Engine/Pos/: Pos.cpp  Pos.h
src/Engine/Transpos/: Transpos.cpp  Transpos.h
src/Engine/Util/: Util.h
src/Engine/Utils/: Utils.cpp  Utils.h
src/Engine/Zobrist/: Zobrist.cpp  Zobrist.h
src/FEN/: FEN.cpp  FEN.h
src/UCI/: UCI.cpp  UCI.h
